Mevcut sayfalar geliştirildi.
Tüm sayfalara breadcrumb eklendi. hakkimizda ve iletisim sayfaları olusturuldu. Foto sayfası için tıklanan resmin büyümesi için script yazıldı.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Fotograf Albumu</a>
-                <a class="nav-item nav-link" href="#">Hakkimizda</a>
-                <a class="nav-item nav-link" href="#">İletisim</a>
+                <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="foto.html">Fotograf Albumu</a>
+                <a class="nav-item nav-link" href="hakkimizda.html">Hakkimizda</a>
+                <a class="nav-item nav-link" href="iletisim.html">İletisim</a>
             </div>
         </div>
+    </nav>
+
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item active">Home</li>
+        </ol>
     </nav>
 
     <img src="mountain.png" class="mx-auto d-block" style="width:500px;">
