--- a/foto.html
+++ b/foto.html
@@ -3,12 +3,19 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-modal/2.2.6/js/bootstrap-modalmanager.min.js" integrity="sha512-/HL24m2nmyI2+ccX+dSHphAHqLw60Oj5sK8jf59VWtFWZi9vx7jzoxbZmcBeeTeCUc7z1mTs3LfyXGuBU32t+w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-modal/2.2.6/js/bootstrap-modalmanager.min.js" integrity="sha512-/HL24m2nmyI2+ccX+dSHphAHqLw60Oj5sK8jf59VWtFWZi9vx7jzoxbZmcBeeTeCUc7z1mTs3LfyXGuBU32t+w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <script>
-
+    $( document ).ready(function() {
+        var img = $("#current_image")
+        $('#exampleModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget)
+            var img_source = button.data('image')
+            img.attr('src', img_source);
+        })
+});
 </script>
 
 <body>
@@ -19,13 +26,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Fotograf Albumu</a>
-                <a class="nav-item nav-link" href="#">Hakkimizda</a>
-                <a class="nav-item nav-link" href="#">İletisim</a>
+                <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="foto.html">Fotograf Albumu</a>
+                <a class="nav-item nav-link" href="hakkimizda.html">Hakkimizda</a>
+                <a class="nav-item nav-link" href="iletisim.html">İletisim</a>
             </div>
         </div>
     </nav>
+
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Photo Library</li>
+        </ol>
+    </nav>
+
     <div class="d-flex justify-content-center">
         <h1>Fotoğraf Albümü</h1>
     </div>
@@ -36,31 +51,48 @@
             <img src="1.png"
                  class="w-100 shadow-1-strong rounded mb-4"
                  alt="1.png" 
-                 data-bs-toggle="modal" data-bs-target="#exampleModal"/>
+                 data-bs-toggle="modal" data-bs-target="#exampleModal"
+                 data-image="1.png"
+            />
 
             <img src="2.png"
                  class="w-100 shadow-1-strong rounded mb-4"
-                 alt="2.png" />
+                 alt="2.png"
+                 data-bs-toggle="modal" data-bs-target="#exampleModal"
+                 data-image="2.png"
+            />
         </div>
 
         <div class="col-lg-4 mb-4 mb-lg-0">
             <img src="3.png"
                  class="w-100 shadow-1-strong rounded mb-4"
-                 alt="3.png" />
+                 alt="3.png"
+                 data-bs-toggle="modal" data-bs-target="#exampleModal"
+                 data-image="3.png"
+            />
 
             <img src="4.png"
                  class="w-100 shadow-1-strong rounded mb-4"
-                 alt="4.png" />
+                 alt="4.png"
+                 data-bs-toggle="modal" data-bs-target="#exampleModal"
+                 data-image="4.png"
+            />
         </div>
 
         <div class="col-lg-4 mb-4 mb-lg-0">
             <img src="5.png"
                  class="w-100 shadow-1-strong rounded mb-4"
-                 alt="5.png" />
+                 alt="5.png"
+                 data-bs-toggle="modal" data-bs-target="#exampleModal"
+                 data-image="5.png"
+            />
 
             <img src="6.png"
                  class="w-100 shadow-1-strong rounded mb-4"
-                 alt="6.png" />
+                 alt="6.png"
+                 data-bs-toggle="modal" data-bs-target="#exampleModal"
+                 data-image="6.png"
+            />
         </div>
 
     </div>
@@ -68,14 +100,14 @@
 
 </body>
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Resim</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <img id="current_image" />
+                <img id="current_image" class="img-fluid" src="1.png"/>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
