--- a/foto.html
+++ b/foto.html
@@ -20,24 +20,21 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="foto.html">Fotograf Albumu</a>
-                <a class="nav-item nav-link" href="hakkimizda.html">Hakkimizda</a>
-                <a class="nav-item nav-link" href="iletisim.html">İletisim</a>
+                <a class="nav-item nav-link active" href="index.html">Anasayfa </a>
+                <a class="nav-item nav-link" href="foto.html">Fotoğraf Albümü</a>
+                <a class="nav-item nav-link" href="hakkimizda.html">Hakkımızda</a>
+                <a class="nav-item nav-link" href="iletisim.html">İletişim</a>
             </div>
         </div>
     </nav>
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Photo Library</li>
+            <li class="breadcrumb-item"><a href="index.html">Anasayfa</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Fotoğraf Albümü</li>
         </ol>
     </nav>
 
@@ -100,7 +97,7 @@
 
 </body>
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-xl" >
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Resim</h5>
@@ -110,8 +107,7 @@
                 <img id="current_image" class="img-fluid" src="1.png"/>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
             </div>
         </div>
     </div>
