--- a/iletisim.html
+++ b/iletisim.html
@@ -8,23 +8,20 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="foto.html">Fotograf Albumu</a>
-                <a class="nav-item nav-link" href="hakkimizda.html">Hakkimizda</a>
-                <a class="nav-item nav-link" href="iletisim.html">İletisim</a>
+                <a class="nav-item nav-link active" href="index.html">Anasayfa </a>
+                <a class="nav-item nav-link" href="foto.html">Fotoğraf Albümü</a>
+                <a class="nav-item nav-link" href="hakkimizda.html">Hakkımızda</a>
+                <a class="nav-item nav-link" href="iletisim.html">İletişim</a>
             </div>
         </div>
     </nav>
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+            <li class="breadcrumb-item"><a href="index.html">Anasayfa</a></li>
             <li class="breadcrumb-item active" aria-current="page">Hakkımızda</li>
         </ol>
     </nav>
@@ -50,13 +47,13 @@
                 <textarea class="form-control" id="messageInput" rows="3"></textarea>
             </div>
             <div class="d-flex justify-content-center">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Gönder</button>
             </div>
         </form>
     </div>
     <div class="d-flex justify-content-center mx-auto my-5">
         <div id="map-container-google-1" class="z-depth-1-half map-container">
-        <iframe src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" style="border:0; width: 500px; height: 300px" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6985.180039798575!2d30.332163299142067!3d40.74081306084729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14ccadf2977958d7%3A0xc7996fa884f94c03!2sSakarya%20%C3%9Cniversitesi!5e0!3m2!1str!2str!4v1673114952683!5m2!1str!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     </div>
 </body>
