--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="foto.html">Fotograf Albumu</a>
-                <a class="nav-item nav-link" href="hakkimizda.html">Hakkimizda</a>
-                <a class="nav-item nav-link" href="iletisim.html">İletisim</a>
+                <a class="nav-item nav-link active" href="index.html">Anasayfa </a>
+                <a class="nav-item nav-link" href="foto.html">Fotoğraf Albümü</a>
+                <a class="nav-item nav-link" href="hakkimizda.html">Hakkımızda</a>
+                <a class="nav-item nav-link" href="iletisim.html">İletişim</a>
             </div>
         </div>
     </nav>
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item active">Home</li>
+            <li class="breadcrumb-item active">Anasayfa</li>
         </ol>
     </nav>
+
+    <div class="d-flex justify-content-center">
+        <h1>Dağ Fotoğrafları Albümü</h1>
+    </div>
 
     <img src="mountain.png" class="mx-auto d-block" style="width:500px;">
 </body>
